fixing contrast

--- a/src/css/story/body.styl
+++ b/src/css/story/body.styl
@@ -288,7 +288,7 @@
     set-type-size('small', true)
     line-height: 1.25
     margin 0.75rem 0
-    color $gray
+    color $gray-dark
   a
-    color $gray
+    color $gray-dark
     border-bottom 1px solid $gray
