--- a/src/css/story/clothes.styl
+++ b/src/css/story/clothes.styl
@@ -152,7 +152,7 @@
         text-align: center
         font-family $national
         font-weight bold
-        color $gray
+        color $gray-dark
         margin-bottom 0
         margin-top 0.25rem
         font-size 14px
@@ -161,7 +161,7 @@
           font-family $national
           text-align: center;
           font-size 12px
-          color $gray
+          color $gray-dark
           margin-top 0
           line-height 1
           margin-left 0.25rem
@@ -211,13 +211,3 @@
       background-color $off-gray
       border-top 1px solid $gray
       border-bottom 1px solid $gray
-      &-title
-        font-weight 700
-        set-type-size('small')
-        margin 0
-        color $gray
-      &-text
-        set-type-size('small', true)
-        line-height: 1.25
-        margin 0.75rem 0
-        color $gray
