--- a/src/css/story/words.styl
+++ b/src/css/story/words.styl
@@ -85,14 +85,14 @@
             cursor pointer
 
           &.is-active
-            background-color lighten($primary, 20)
+            background-color lighten($primary, 25)
 
             svg
               stroke $primary
               transition 100ms ease-in-out
 
           &.is-active
-            background-color lighten($primary, 20)
+            background-color lighten($primary, 25)
             transition 100ms ease-in-out
 
             svg
@@ -109,7 +109,7 @@
           display flex
           flex-direction column
           padding 20px 30px 20px 20px
-          background-color lighten($primary, 35)
+          background-color lighten($primary, 45)
           .top
             display flex
             flex-direction row
@@ -122,7 +122,7 @@
 
             .school-state
               font-size 14px
-              color $gray-dark
+              color $gray-extraDark
               margin 0
 
           .bottom
@@ -185,7 +185,7 @@
 
                   .school-state
                     font-size 14px
-                    color $gray-dark
+                    color $gray-extraDark
                     margin 0
 
                 .bottom
